--- a/simon/src/index.css
+++ b/simon/src/index.css
@@ -2,8 +2,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
 }
 
 .react-countdown-clock {
